--- a/src/index.css
+++ b/src/index.css
@@ -178,3 +178,23 @@ html {
 .error-page h3 {
   font-weight: normal;
 }
+/* ====================New================ */
+.journal-entry-image {
+  max-width: 300px; /* Thay đổi giá trị này để thay đổi kích thước ảnh */
+  height: auto;
+  margin-right: 20px; /* Thay đổi giá trị này để thay đổi khoảng cách giữa ảnh và title và content */
+}
+.card {
+  /* box-shadow: 0 0 1px rgba(0, 0, 0, 0.12); */
+  border-radius: 0.25rem;
+  padding: 1.25rem;
+  margin-bottom: 1.25rem;
+}
+.journal-entry {
+  display: flex;
+  flex-direction: column;
+}
+
+.text-bold {
+  font-weight: bold;
+}
