--- a/src/App.css
+++ b/src/App.css
@@ -83,3 +83,35 @@
 .ant-btn-primary {
   background: #1677ff;
 }
+
+@keyframes twinkling {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.6;
+  }
+  100% {
+    opacity: 0.8;
+  }
+}
+
+.twinkling {
+  animation: twinkling 1s infinite;
+}
+
+@keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0.8;
+  }
+}
+
+.animate-blink {
+  animation: blink 1s infinite;
+}
